# ontovis

./: .gitignore  COMMANDS.md  pyproject.toml
.github/workflows/: publish.yaml
src/ontovis/: __init__.py  main.py  parser.py  types.py
src/ontovis/lib/: builder.py  parser.py  reader.py  types.py
src/ontovis/templates/: graph.dot.jinja2  no_fields.dot.jinja2  no_groups.dot.jinja2
tests/: test_app.py  test_types.py
tests/parser/: test_parser.py
typings/ontovis/: main.pyi  parser.pyi  types.pyi
typings/ontovis/lib/: builder.pyi  parser.pyi  reader.pyi  types.pyi
