[project]
name = "ontovis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oliver Baumann", email = "oliver.baumann@uni-bayreuth.de" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[project.scripts]
ontovis = "ontovis.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
addopts = [
"--cov=ontovis",
"--cov-report=xml"
]
